--- a/views/userViews/index.ejs
+++ b/views/userViews/index.ejs
@@ -12,7 +12,7 @@
   <meta name="author" content="" />
   <link rel="shortcut icon" href="/assets/images/favicon.png" type="">
 
-  <title> Finexo </title>
+  <title> Crypto Alerter </title>
     <link rel="stylesheet" href="/assets/css/index.css" />
     <link rel="stylesheet" type="text/css" href="/assets/css/bootstrap.css" />
 
@@ -30,22 +30,7 @@
   <!-- responsive style -->
   <link href="/assets/css/responsive.css" rel="stylesheet" />
 </head>
-<!--
 
-Hi,
-If you use this tabel, please don't remove author tag.
-
-Please send me Your website screen in private message on my Instagram @adituyt or mail stelmaszewskiadam@gmail.com
-
-
-You Can Change All Of White Text In HTML.
-Current White Text Presented All Polish Airports (Without Sports & Military).
-
-Please read all gray text.
-
-Enjoy!
-Author.
--->
 
 
 <!--Import Fonts & jQuery-->
@@ -119,15 +104,13 @@ Author.
                       <div class="detail-box">
                         <h1>
                           Crypto <br>
-                          Currency
+                          Alerter
                         </h1>
-                        <p>
-                          Explicabo esse amet tempora quibusdam laudantium, laborum eaque magnam fugiat hic? Esse dicta aliquid error repudiandae earum suscipit fugiat molestias, veniam, vel architecto veritatis delectus repellat modi impedit sequi.
-                        </p>
+                        <p>Get alerted when a trading pair costs more than the other through email and search about trading pairs.</p>
                         <div class="btn-box">
-                          <a href="" class="btn1">
+                          <!-- <a href="" class="btn1">
                             Read More
-                          </a>
+                          </a> -->
                         </div>
                       </div>
                     </div>
@@ -146,15 +129,13 @@ Author.
                       <div class="detail-box">
                         <h1>
                           Crypto <br>
-                          Currency
+                          Alerter
                         </h1>
-                        <p>
-                          Explicabo esse amet tempora quibusdam laudantium, laborum eaque magnam fugiat hic? Esse dicta aliquid error repudiandae earum suscipit fugiat molestias, veniam, vel architecto veritatis delectus repellat modi impedit sequi.
-                        </p>
+                        <p>Get alerted when a trading pair costs more than the other through email and search about trading pairs.</p>
                         <div class="btn-box">
-                          <a href="" class="btn1">
+                          <!-- <a href="" class="btn1">
                             Read More
-                          </a>
+                          </a> -->
                         </div>
                       </div>
                     </div>
@@ -173,15 +154,13 @@ Author.
                       <div class="detail-box">
                         <h1>
                           Crypto <br>
-                          Currency
+                          Alerter
                         </h1>
-                        <p>
-                          Explicabo esse amet tempora quibusdam laudantium, laborum eaque magnam fugiat hic? Esse dicta aliquid error repudiandae earum suscipit fugiat molestias, veniam, vel architecto veritatis delectus repellat modi impedit sequi.
-                        </p>
+                        <p>Get alerted when a trading pair costs more than the other through email and search about trading pairs.</p>
                         <div class="btn-box">
-                          <a href="" class="btn1">
+                          <!-- <a href="" class="btn1">
                             Read More
-                          </a>
+                          </a> -->
                         </div>
                       </div>
                     </div>
