--- a/views/userViews/post.ejs
+++ b/views/userViews/post.ejs
@@ -13,7 +13,7 @@
   <meta name="author" content="" />
   <link rel="shortcut icon" href="/assets/images/favicon.png" type="">
 
-  <title> Finexo </title>
+  <title> Crypto Alerter </title>
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="/assets/css/bootstrap.css" />
@@ -102,15 +102,13 @@
                   <div class="detail-box">
                     <h1>
                       Crypto <br>
-                      Currency
+                      Alerter
                     </h1>
-                    <p>
-                      Explicabo esse amet tempora quibusdam laudantium, laborum eaque magnam fugiat hic? Esse dicta aliquid error repudiandae earum suscipit fugiat molestias, veniam, vel architecto veritatis delectus repellat modi impedit sequi.
-                    </p>
+                    <p>Get alerted when a trading pair costs more than the other through email and search about trading pairs.</p>
                     <div class="btn-box">
-                      <a href="" class="btn1">
+                      <!-- <a href="" class="btn1">
                         Read More
-                      </a>
+                      </a> -->
                     </div>
                   </div>
                 </div>
@@ -129,15 +127,13 @@
                   <div class="detail-box">
                     <h1>
                       Crypto <br>
-                      Currency
+                      Alerter
                     </h1>
-                    <p>
-                      Explicabo esse amet tempora quibusdam laudantium, laborum eaque magnam fugiat hic? Esse dicta aliquid error repudiandae earum suscipit fugiat molestias, veniam, vel architecto veritatis delectus repellat modi impedit sequi.
-                    </p>
+                    <p>Get alerted when a trading pair costs more than the other through email and search about trading pairs.</p>
                     <div class="btn-box">
-                      <a href="" class="btn1">
+                      <!-- <a href="" class="btn1">
                         Read More
-                      </a>
+                      </a> -->
                     </div>
                   </div>
                 </div>
@@ -156,15 +152,13 @@
                   <div class="detail-box">
                     <h1>
                       Crypto <br>
-                      Currency
+                      Alerter
                     </h1>
-                    <p>
-                      Explicabo esse amet tempora quibusdam laudantium, laborum eaque magnam fugiat hic? Esse dicta aliquid error repudiandae earum suscipit fugiat molestias, veniam, vel architecto veritatis delectus repellat modi impedit sequi.
-                    </p>
+                    <p>Get alerted when a trading pair costs more than the other through email and search about trading pairs.</p>
                     <div class="btn-box">
-                      <a href="" class="btn1">
+                      <!-- <a href="" class="btn1">
                         Read More
-                      </a>
+                      </a> -->
                     </div>
                   </div>
                 </div>
@@ -189,8 +183,26 @@
   </div>
 
 
+  <form action="/" method="POST">
+    <div class="group">
+      <input type="text" name="first"><span class="highlight"></span><span class="bar"></span>
+      <label>First Trading Pair</label>
+    </div>
+    <div class="group">
+      <input type="text" name="second"><span class="highlight"></span><span class="bar"></span>
+      <label>Second Trading Pair</label>
+    </div>
+    <div class="group">
+      <input type="text" name="email"><span class="highlight"></span><span class="bar"></span>
+      <label>Email</label>
+    </div>
+    <button type="submit" class="button buttonBlue">Submit
+      <div class="ripples buttonRipples"><span class="ripplesCircle"></span></div>
+    </button>
+  </form>
+  
   <!-- service section -->
-
+<!-- 
   <section class="service_section layout_padding">
     <div class="service_container">
       <div class="container ">
@@ -271,14 +283,14 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- end service section -->
 
 
   <!-- about section -->
 
-  <section class="about_section layout_padding">
+  <!-- <section class="about_section layout_padding">
     <div class="container  ">
       <div class="heading_container heading_center">
         <h2>
@@ -315,13 +327,13 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- end about section -->
 
   <!-- why section -->
 
-  <section class="why_section layout_padding">
+  <!-- <section class="why_section layout_padding">
     <div class="container">
       <div class="heading_container heading_center">
         <h2>
@@ -392,12 +404,12 @@
         </a>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- end why section -->
 
   <!-- team section -->
-  <section class="team_section layout_padding">
+  <!-- <section class="team_section layout_padding">
     <div class="container-fluid">
       <div class="heading_container heading_center">
         <h2 class="">
@@ -538,13 +550,13 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <!-- end team section -->
 
 
   <!-- client section -->
 
-  <section class="client_section layout_padding">
+  <!-- <section class="client_section layout_padding">
     <div class="container">
       <div class="heading_container heading_center psudo_white_primary mb_45">
         <h2>
@@ -644,14 +656,14 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- end client section -->
 
 
   <!-- info section -->
 
-  <section class="info_section layout_padding2">
+  <!-- <section class="info_section layout_padding2">
     <div class="container">
       <div class="row">
         <div class="col-md-6 col-lg-3 info_col">
@@ -736,7 +748,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- end info section -->
 
@@ -745,13 +757,14 @@
     <div class="container">
       <p>
         &copy; <span id="displayYear"></span> All Rights Reserved By
-        <a href="https://html.design/">Free Html Templates</a>
+        <a href="">JCF</a>
       </p>
     </div>
   </section>
   <!-- footer section -->
 
   <!-- jQery -->
+  
   <script type="text/javascript" src="/assets/js/jquery-3.4.1.min.js"></script>
   <!-- popper js -->
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
