--- a/views/userViews/index.ejs
+++ b/views/userViews/index.ejs
@@ -201,7 +201,7 @@ Near there you can see "!^^^!"-->
       <div class="right">WSNAME</div>
       <div class="center">Base | Quote</div>
     </div>
-    <div id="myTable" author="Adam Stelmaszewski"><!--!^^^!-->
+    <div id="myTable">
       <% for(i of allCryptoPairData){ %>
       <div>
         <div class="inside">
