--- a/views/userViews/post.ejs
+++ b/views/userViews/post.ejs
@@ -185,6 +185,13 @@
 
   <form action="/" method="POST">
     <div class="group">
+      <h2>Enter the Trading pair</h2>
+      <br>
+      <h3>
+        Crypto 
+      </h3>
+    </div>
+    <div class="group">
       <input type="text" name="first"><span class="highlight"></span><span class="bar"></span>
       <label>First Trading Pair</label>
     </div>
