copy to clipboard done

--- a/views/userViews/post.ejs
+++ b/views/userViews/post.ejs
@@ -187,9 +187,9 @@
     <div class="group">
       <h2>Enter the Trading pair</h2>
       <br>
-      <h3>
-        Crypto 
-      </h3>
+      <h4>
+        When First Trading Pair exceeds Second Trading Pair mail will be sent to the required User!
+      </h4>
     </div>
     <div class="group">
       <input type="text" name="first"><span class="highlight"></span><span class="bar"></span>
