--- a/views/userViews/post.ejs
+++ b/views/userViews/post.ejs
@@ -185,11 +185,11 @@
 
   <form action="/" method="POST">
     <div class="group">
-      <h2>Enter the Trading pair</h2>
+      <h2 style="text-align: center;"><strong>Enter the Trading pair</strong></h2>
       <br>
-      <h4>
+      <p>
         When First Trading Pair exceeds Second Trading Pair mail will be sent to the required User!
-      </h4>
+      </p>
     </div>
     <div class="group">
       <input type="text" name="first"><span class="highlight"></span><span class="bar"></span>
