--- a/views/userViews/post.ejs
+++ b/views/userViews/post.ejs
@@ -188,16 +188,12 @@
       <h2 style="text-align: center;"><strong>Enter the Trading pair</strong></h2>
       <br>
       <p>
-        When First Trading Pair exceeds Second Trading Pair mail will be sent to the required User!
+        When Trading Pair Slow EMA exceeds Fast EMA mail will be sent to the required User!
       </p>
     </div>
     <div class="group">
-      <input type="text" name="first"><span class="highlight"></span><span class="bar"></span>
-      <label>First Trading Pair</label>
-    </div>
-    <div class="group">
-      <input type="text" name="second"><span class="highlight"></span><span class="bar"></span>
-      <label>Second Trading Pair</label>
+      <input type="text" name="symbol"><span class="highlight"></span><span class="bar"></span>
+      <label>Trading Pair</label>
     </div>
     <div class="group">
       <input type="text" name="email"><span class="highlight"></span><span class="bar"></span>
